@@ -31,7 +31,6 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.hisp.dhis.common.BaseIdentifiableObject;
@@ -39,6 +38,7 @@ import org.hisp.dhis.common.DeliveryChannel;
 import org.hisp.dhis.common.IdentifiableObject;
 import org.hisp.dhis.common.IdentifiableObjectManager;
 import org.hisp.dhis.common.IllegalQueryException;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.feedback.NotFoundException;
 import org.hisp.dhis.organisationunit.OrganisationUnitService;
 import org.hisp.dhis.outboundmessage.BatchResponseStatus;
@@ -117,6 +117,28 @@ public class DefaultProgramMessageService implements ProgramMessageService {
 
   @Override
   @Transactional
+  public void updateProgramMessage(UID uid, ProgramMessageStatus status) throws NotFoundException {
+    ProgramMessage persisted = programMessageStore.getByUid(uid.getValue());
+    if (persisted == null) {
+      throw new NotFoundException(ProgramMessage.class, uid.getValue());
+    }
+
+    persisted.setMessageStatus(status);
+    programMessageStore.update(persisted);
+  }
+
+  @Override
+  @Transactional
+  public void deleteProgramMessage(UID uid) throws NotFoundException {
+    ProgramMessage persisted = programMessageStore.getByUid(uid.getValue());
+    if (persisted == null) {
+      throw new NotFoundException(ProgramMessage.class, uid.getValue());
+    }
+    programMessageStore.delete(persisted);
+  }
+
+  @Override
+  @Transactional
   public void updateProgramMessage(ProgramMessage programMessage) {
     programMessageStore.update(programMessage);
   }
@@ -133,7 +155,7 @@ public class DefaultProgramMessageService implements ProgramMessageService {
         programMessages.stream()
             .filter(this::hasDataWriteAccess)
             .map(this::setAttributesBasedOnStrategy)
-            .collect(Collectors.toList());
+            .toList();
 
     List<OutboundMessageBatch> batches = createBatches(populatedProgramMessages);
 
